force-app/main/default/objects/Schedule__c/fields/Appliances_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Completion_Date__c</fullName>
    <label>Appliances Completion Date</label>
    <type>Date</type>
</CustomField>