force-app/main/default/objects/Schedule__c/fields/Appliances_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Appliances_Start_Date__c</fullName>
    <label>Appliances Start Date</label>
    <type>Date</type>
</CustomField>