force-app/main/default/objects/Schedule__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>