force-app/main/default/objects/Schedule__c/fields/Cabinetry_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Cabinetry_Completion_Date__c</fullName>
    <label>Cabinetry Completion Date</label>
    <type>Date</type>
</CustomField>