force-app/main/default/objects/Schedule__c/fields/Cabinetry_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cabinetry_Start_Date__c</fullName>
    <label>Cabinetry Start Date</label>
    <type>Date</type>
</CustomField>