force-app/main/default/objects/Schedule__c/fields/Cleaning_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Completion_Date__c</fullName>
    <label>Cleaning Completion Date</label>
    <type>Date</type>
</CustomField>