force-app/main/default/objects/Schedule__c/fields/Cleaning_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Start_Date__c</fullName>
    <label>Cleaning Start Date</label>
    <type>Date</type>
</CustomField>