force-app/main/default/objects/Schedule__c/fields/Current_PDF_Version__c.field-meta.xml
<CustomField>
    <fullName>Current_PDF_Version__c</fullName>
    <label>Current_PDF_Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>