force-app/main/default/objects/Schedule__c/fields/Doors_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Doors_Completion_Date__c</fullName>
    <label>Doors Completion Date</label>
    <type>Date</type>
</CustomField>