force-app/main/default/objects/Schedule__c/fields/Doors_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Doors_Start_Date__c</fullName>
    <label>Doors Start Date</label>
    <type>Date</type>
</CustomField>