force-app/main/default/objects/Schedule__c/fields/Drywall_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Drywall_Completion_Date__c</fullName>
    <label>Drywall Completion Date</label>
    <type>Date</type>
</CustomField>