force-app/main/default/objects/Schedule__c/fields/Drywall_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Drywall_Start_Date__c</fullName>
    <label>Drywall Start Date</label>
    <type>Date</type>
</CustomField>