force-app/main/default/objects/Schedule__c/fields/Electrical_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Completion_Date__c</fullName>
    <label>Electrical Completion Date</label>
    <type>Date</type>
</CustomField>