force-app/main/default/objects/Schedule__c/fields/Electrical_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Start_Date__c</fullName>
    <label>Electrical Start Date</label>
    <type>Date</type>
</CustomField>