force-app/main/default/objects/Schedule__c/fields/Final_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Completion_Date__c</fullName>
    <label>Final Completion Date</label>
    <type>Date</type>
</CustomField>