force-app/main/default/objects/Schedule__c/fields/Finish_Trim_Carpentry_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Trim_Carpentry_Start_Date__c</fullName>
    <label>Finish Trim/Carpentry Start Date</label>
    <type>Date</type>
</CustomField>