force-app/main/default/objects/Schedule__c/fields/Floor_Covering_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Floor_Covering_Start_Date__c</fullName>
    <label>Floor Covering Start Date</label>
    <type>Date</type>
</CustomField>