force-app/main/default/objects/Schedule__c/fields/Framing_Rough_Carpentry_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Framing_Rough_Carpentry_Completion_Date__c</fullName>
    <label>Framing/Rough Carpentry Completion Date</label>
    <type>Date</type>
</CustomField>