force-app/main/default/objects/Schedule__c/fields/General_Demolition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>General_Demolition_Start_Date__c</fullName>
    <label>General Demolition Start Date</label>
    <type>Date</type>
</CustomField>