force-app/main/default/objects/Schedule__c/fields/Heat_Vent_A_C_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Heat_Vent_A_C_Start_Date__c</fullName>
    <label>Heat, Vent &amp; A/C Start Date</label>
    <type>Date</type>
</CustomField>