force-app/main/default/objects/Schedule__c/fields/Insulation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Completion_Date__c</fullName>
    <label>Insulation Completion Date</label>
    <type>Date</type>
</CustomField>