force-app/main/default/objects/Schedule__c/fields/Insulation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Insulation_Start_Date__c</fullName>
    <label>Insulation Start Date</label>
    <type>Date</type>
</CustomField>