force-app/main/default/objects/Schedule__c/fields/Interior_Lath_Plaster_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Interior_Lath_Plaster_Completion_Date__c</fullName>
    <label>Interior Lath &amp; Plaster Completion Date</label>
    <type>Date</type>
</CustomField>