force-app/main/default/objects/Schedule__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>