force-app/main/default/objects/Schedule__c/fields/Painting_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Painting_Completion_Date__c</fullName>
    <label>Painting Completion Date</label>
    <type>Date</type>
</CustomField>