force-app/main/default/objects/Schedule__c/fields/Painting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Painting_Start_Date__c</fullName>
    <label>Painting Start Date</label>
    <type>Date</type>
</CustomField>