force-app/main/default/objects/Schedule__c/fields/Project_Director__c.field-meta.xml
<CustomField>
    <fullName>Project_Director__c</fullName>
    <description>Project Director&apos;s full name, email and phone number.</description>
    <formula>ATI_Job__r.Project_Manager_Full_Name__c +BR()+ ATI_Job__r.Project_Manager__r.MobilePhone +BR()+ ATI_Job__r.Project_Manager_Email__c</formula>
    <label>Project Director</label>
    <type>Text</type>
</CustomField>