force-app/main/default/objects/Schedule__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <description>Project Manager&apos;s full name, Phone, and Email.</description>
    <formula>ATI_Job__r.Project_Manager_New_Full_Name__c +BR()+ 
ATI_Job__r.Super_Ops_Email__c +BR()+ 
ATI_Job__r.Super_Ops_Phone__c</formula>
    <label>Project Manager</label>
    <type>Text</type>
</CustomField>