force-app/main/default/objects/Schedule__c/fields/Project_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Address__c</fullName>
    <description>Pulls the Project site address from the job.</description>
    <formula>ATI_Job__r.Project_Site_Address__c +&quot; &quot;+ ATI_Job__r.Project_Site_Address_2__c +BR()+ ATI_Job__r.Project_Site_City__c +&quot;, &quot;+ ATI_Job__r.Project_Site_City__c  +&quot; &quot;+ ATI_Job__r.Project_Site_Zipcode__c</formula>
    <label>Project Site Address</label>
    <type>Text</type>
</CustomField>