force-app/main/default/objects/Schedule__c/fields/Roofing_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Completion_Date__c</fullName>
    <label>Roofing Completion Date</label>
    <type>Date</type>
</CustomField>