force-app/main/default/objects/Schedule__c/fields/Roofing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Start_Date__c</fullName>
    <label>Roofing Start Date</label>
    <type>Date</type>
</CustomField>