force-app/main/default/objects/Schedule__c/fields/Schedule_Count__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>