force-app/main/default/objects/Schedule__c/fields/Schedule_Number_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Number_Incremental__c</fullName>
    <label>Schedule Number Incremental</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>