force-app/main/default/objects/Schedule__c/fields/Stucco_Exterior_Plaster_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stucco_Exterior_Plaster_Start_Date__c</fullName>
    <label>Stucco/Exterior Plaster Start Date</label>
    <type>Date</type>
</CustomField>