force-app/main/default/objects/Schedule__c/fields/Wallpaper_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Wallpaper_Completion_Date__c</fullName>
    <label>Wallpaper Completion Date</label>
    <type>Date</type>
</CustomField>