force-app/main/default/objects/Schedule__c/fields/Wallpaper_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Wallpaper_Start_Date__c</fullName>
    <label>Wallpaper Start Date</label>
    <type>Date</type>
</CustomField>