force-app/main/default/objects/Schedule__c/fields/Windows_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Windows_Completion_Date__c</fullName>
    <label>Windows Completion Date</label>
    <type>Date</type>
</CustomField>