force-app/main/default/objects/Schedule__c/fields/Windows_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Windows_Start_Date__c</fullName>
    <label>Windows Start Date</label>
    <type>Date</type>
</CustomField>